<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center_horizontal" android:padding="0dp"
	android:orientation="vertical">

	<ScrollView android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="1">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:gravity="center_horizontal">

			<ImageView android:id="@+id/logo" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:src="@drawable/logo"
				android:layout_marginTop="30dp" android:layout_marginBottom="30dp"></ImageView>

			<LinearLayout android:id="@+id/loading_ll"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:orientation="vertical" android:layout_weight="1"
				android:visibility="gone">

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/loading_label"
					style="@style/Label" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="vertical"
				android:padding="0dp" android:layout_marginLeft="36dp"
				android:layout_marginRight="36dp" android:layout_weight="1">

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/login_label"
					style="@style/Label" />

				<EditText android:id="@+id/login_et" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="true"
					android:inputType="textEmailAddress" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/password_label"
					style="@style/Label" android:layout_marginTop="11dp" />

				<EditText android:id="@+id/password_et"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:singleLine="true" android:password="true" />

				<Button android:id="@+id/sign_in_btn" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/sign_in_btn"
					android:layout_marginTop="22dp" android:onClick="signIn" />

				<TextView
					android:id="@+id/enter_code_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_margin="20dp"
					android:padding="10dp"
					android:text="@string/entern_app_code_btn"
					android:textSize="20sp"
					android:textColor="@color/button_enabled_color"
					/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

	<TextView android:layout_width="fill_parent"
		android:gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:text="@string/rights"
		style="@style/Rights"
		android:layout_marginBottom="22dp" />

</LinearLayout>
